Some adjustments on exercise 2 and rewriting of exercise 3.

--- a/C_Y1/workshop1/intro_to_pylab.ipynb
+++ b/C_Y1/workshop1/intro_to_pylab.ipynb
@@ -1945,15 +1945,15 @@
      "source": [
       "The simplest model describing the vibration of a diatomic molecule is given by the [harmonic oscilator](http://en.wikipedia.org/wiki/Harmonic_oscillator), where the potential energy *V* of the molecule varies as a function of the internuclear distance *r* as\n",
       "\n",
-      "$$V_{\\text{harmonic}}(r)=\\frac{k_e}{2}(r-r_e)^2.$$\n",
+      "$$V_{h}(r)=\\frac{k}{2}(r-r_e)^2.$$\n",
       "\n",
-      "In this expression $r_e$ is the internuclear distance of equilibrium and $k_e$ relates to the frequency of the vibration.\n",
+      "In this expression $r_e$ is the internuclear distance of equilibrium and $k$ relates to the frequency of the vibration.\n",
       "\n",
       "A more realistic model of the diatomic molecule case is given by the [Morse potential](http://en.wikipedia.org/wiki/Morse_potential)\n",
       "\n",
-      "$$V_{\\text{morse}}(r) = D_e ( 1-e^{-a(r-r_e)} )^2,$$\n",
+      "$$V_{m}(r) = D ( 1-e^{-a(r-r_e)} )^2,$$\n",
       "\n",
-      "where $D_e$ corresponds to the dissociation energy.\n",
+      "where *D* corresponds to the dissociation energy.\n",
       "\n",
       "The cell bellow plots the two potential curves on the same figure."
      ]
@@ -1973,6 +1973,7 @@
       "plot(X, morse, label=r'$V_{morse}(r)$')\n",
       "plot(X, harmonic, color='red',label=r'$V_{harmonic}(r)$')\n",
       "legend()\n",
+      "title('D=1, a=1, re=1')\n",
       "\n",
       "xlabel('r')\n",
       "ylim(0,1.5)\n",
@@ -1988,7 +1989,7 @@
      "source": [
       "Based on the behaviour of the two functions at large *r* values, can you say why the Morse potential provides a more realistic picture the harmonic oscilator?\n",
       "\n",
-      "In this excercise we will focus on the Morse potential. The force between the two particles is equal to minus the derivative of the potential - $\\frac{dV(r)}{dr}$ (for whichever form the potential may have). We would like to add a line corresponding to the force superimposed on the plot of the Morse potential energy. You'll also need to add, a title, label the x axis, create a legend and if you can, move the spines such that it crosses the *y* axis at 0, such as to reproduce the figure below.\n",
+      "The force between the two particles is equal to minus the derivative of the potential - $\\frac{dV(r)}{dr}$ (for whichever form the potential may have). In this exercise we would like to generate two figures, one for each potential, where we add a line corresponding to the force superimposed on the plot of the potential energy. You'll also need to add, a title, label the x axis, create a legend and if you can, move the spines such that it crosses the *y* axis at 0. The figure bellow shows the effect for the Morse potential.\n",
       "\n",
       "\n",
       "<img src=\"files/morse_exercise.svg\">"
@@ -2040,70 +2041,61 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this exercise you will modify the cell below such that the resulting scatter plot gains this appearance:\n",
-      "    \n",
-      "<img src='files/scatter_exercise.png'>\n",
-      "\n",
-      "If we consider each point as a vector beginning at the origin and ending at the point then we can associate with each point the angle defined between its vector and the x-axis. Given the x and y coordinates of the point we can compute this angle via $\\tan^{-1} (\\frac{y}{x})$. The function to do this in a code cell is *arctan2(x,y)* \n",
-      "\n",
-      "e.g. arctan2(1,1) = 0.78539816339744828 \n",
-      "\n",
-      "To reproduce the above plot you will need to colour each point by this angle.\n",
-      "\n",
-      "Hint: Remember functions work on entire arrays as well as just single numbers!\n",
-      "\n",
-      "Technical hint: All examples covered so far use the *color* argument of function **scatter**. In this exercise you should use the argument *c* instead of *color* and rather than setting it to a string specifying the name of a colour you should set it to an array of numbers i.e. \"c=W\" where *W* is an array of numbers. These numbers will be used to specify the colour of each scatter point. (After you execute the cell below make another cell and look at what variable *W* is to make sure you understand what's going on)"
+      "The code cell below generates a plot representing 3 periods of a damped oscillator. In this exercise you will be generating two figures where we colour the markers differently. On a first figure color the markers sequentially with three distink colors (eg. blue, green, red, blue, green, red, blue, etc.). On the second figure color the markers corresponding to each period of the motion with a different color."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "figure(figsize=(6,6))\n",
+      "points=90\n",
+      "x=linspace(0,6*pi,points)\n",
+      "y=e**(-x/10)*cos(x)\n",
       "\n",
-      "data = loadtxt('scatter_ex_data.txt')\n",
-      "D1 = data[0]\n",
-      "D2 = data[1]\n",
-      "\n",
-      "W = zeros(412)\n",
-      "\n",
-      "xticks([])\n",
-      "yticks([])\n",
-      "\n",
-      "scatter(D1,D2,c=W)\n",
+      "plot(x,y,linestyle='None',marker=7,alpha=0.5)\n",
       "show()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 29
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Soln\n",
+      "#soln\n",
       "\n",
-      "figure(figsize=(6,6))\n",
+      "points=90\n",
+      "x=linspace(0,6*pi,points)\n",
+      "y=e**(-x/10)*cos(x)\n",
       "\n",
-      "data = loadtxt('scatter_ex_data.txt')\n",
-      "D1,D2 = data\n",
-      "\n",
-      "T = arctan2(D2,D1)\n",
-      "\n",
-      "#scatter(D1,D2, s=75, c=T, alpha=.5)\n",
-      "scatter(D1,D2,c=T)\n",
-      "plot()\n",
-      "xlim(-1,1)\n",
-      "ylim(-1,1)\n",
-      "\n",
-      "#colorbar()\n",
+      "plot(x[::3],y[::3],alpha=0.5,linestyle='None',marker=7)\n",
+      "plot(x[1::3],y[1::3],alpha=0.5,linestyle='None',marker=7)\n",
+      "plot(x[2::3],y[2::3],alpha=0.5,linestyle='None',marker=7)\n",
       "show()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 35
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#soln\n",
+      "\n",
+      "points=90\n",
+      "x=linspace(0,6*pi,points)\n",
+      "y=e**(-x/10)*cos(x)\n",
+      "\n",
+      "plot(x[:points/3],y[:points/3],alpha=0.5,linestyle='None',marker=7)\n",
+      "plot(x[points/3:2*points/3],y[points/3:2*points/3],alpha=0.5,linestyle='None',marker=7)\n",
+      "plot(x[2*points/3:points],y[2*points/3:points],alpha=0.5,linestyle='None',marker=7)\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -2288,6 +2280,10 @@
       "<td>dotted line</td>\n",
       "<td><img class=\"first last\" src=\"files/figures/linestyle-:.png\" />\n",
       "</td>\n",
+      "</tr>\n",
+      "<tr><td><tt class=\"docutils literal\">'None'</tt></td>\n",
+      "<td>no line</td>\n",
+      "<td></td>\n",
       "</tr>\n",
       "</tbody>\n",
       "</table>"
