Add a few more details on multidimensional arrays.

--- a/C_Y1/workshop1/intro_to_pylab.ipynb
+++ b/C_Y1/workshop1/intro_to_pylab.ipynb
@@ -9,7 +9,7 @@
    "language": "python",
    "name": "python2"
   },
-  "name": "intro_to_pylab",
+  "name": "",
   "signature": "sha256:fc565642cbbac6770de6596901e540fad71513f33e138cd31859a604980d1273"
  },
  "nbformat": 3,
@@ -498,9 +498,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "Welcome to pylab, a matplotlib-based Python environment [backend: module://IPython.zmq.pylab.backend_inline].\n",
-        "For more information, type 'help(pylab)'.\n"
+        "Populating the interactive namespace from numpy and matplotlib\n"
        ]
       }
      ],
@@ -905,7 +903,28 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In addition to one dimension arrays, we can have two dimensional arrays (note the extra square brackets!):\n",
+      "Up to this point we have considered simple 1D arrays, where each entry in the array is a number (or variable). More complex and more useful data structures can be constructed by considering that each element of an *array* is another *array*:\n",
+      "\n",
+      "    array([array([1, 2, 3]),array([4, 5, 6]),array([7, 8, 9])])"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In this way we can construct 2D (or higher dimension) arrays, which can be thought as 2D tables or [matrices](http://mathworld.wolfram.com/Matrix.html). Each array inside the original array is one line in our 2D table.\n",
+      "\n",
+      "From the output of the previous cell you see that all the array commands inside the original array have been suppressed, but the square brackets that provide data structure are included. This is an equivalent, more convenient way of defining 2D arrays, but it can still be useful to thing of them as arrays inside arrays.\n",
+      "\n",
+      "Let us now define a bigger 2D array:\n",
       "\n",
       "    a = array([[ 0,  1,  2,  3,  4,  5],\n",
       "               [10, 11, 12, 13, 14, 15],\n",
@@ -944,7 +963,45 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In 2D the indexing works the same way. The first dimension corresponds to rows, the second to columns and we use a comma in the indexing to delimit the two dimensions."
+      "In order to acces elements on a 2D array we can use two indeces,\n",
+      "\n",
+      "    a[i1][i2]\n",
+      "    \n",
+      "The two indeces can be seen to operate sequentially *(a[i1])[i2]*. From array *a* we'll be selecting the row at position *i1*, and then we'll be selecting element in position *i2* from that row.\n",
+      "\n",
+      "    a[0][4]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Instead of using the squared brackets twice, the two indeces can be separated by a comma:\n",
+      "\n",
+      "    a[0,4]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Index ranges in 2D arrays can be expressed in an analougous way to the 1D case, remembering the first index corresponds to rows, and the second to columns."
      ]
     },
     {
@@ -989,6 +1046,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "    a[:,2]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Do you understand why the last command gives you the 3rd column of the array? Take half a minute to think about it and ask if it is not clear.\n",
+      "\n",
       "Ok time to generate some data. We'll use another pylab function called **linspace**. To get a feel for what linspace is doing execute the following line and take a look at the output:\n",
       "     \n",
       "    linspace(-pi, pi, 10)"
@@ -1970,8 +2044,8 @@
       "morse = D*(1-e**(-a*(X-re)))**2\n",
       "harmonic=(a**2)*D*(X-re)**2\n",
       "\n",
-      "plot(X, morse, label=r'$V_{morse}(r)$')\n",
-      "plot(X, harmonic, color='red',label=r'$V_{harmonic}(r)$')\n",
+      "plot(X, morse, label=r'$V_m (r)$')\n",
+      "plot(X, harmonic, color='red',label=r'$V_h (r)$')\n",
       "legend()\n",
       "title('D=1, a=1, re=1')\n",
       "\n",
