Correct some typos.

--- a/C_Y1/workshop1/intro_to_pylab.ipynb
+++ b/C_Y1/workshop1/intro_to_pylab.ipynb
@@ -920,7 +920,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this way we can construct 2D (or higher dimension) arrays, which can be thought as 2D tables or [matrices](http://mathworld.wolfram.com/Matrix.html). Each array inside the original array is one line in our 2D table.\n",
+      "In this way we can construct 2D (or higher dimension) arrays, which can be thought as 2D tables or [matrices](http://mathworld.wolfram.com/Matrix.html). Each array inside the original array is one row in our 2D table.\n",
       "\n",
       "From the output of the previous cell you see that all the array commands inside the original array have been suppressed, but the square brackets that provide data structure are included. This is an equivalent, more convenient way of defining 2D arrays, but it can still be useful to thing of them as arrays inside arrays.\n",
       "\n",
@@ -963,11 +963,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In order to acces elements on a 2D array we can use two indeces,\n",
+      "In order to access elements on a 2D array we can use two indices,\n",
       "\n",
       "    a[i1][i2]\n",
       "    \n",
-      "The two indeces can be seen to operate sequentially *(a[i1])[i2]*. From array *a* we'll be selecting the row at position *i1*, and then we'll be selecting element in position *i2* from that row.\n",
+      "The two indices can be seen to operate sequentially *(a[i1])[i2]*. From array *a* we'll be selecting the row at position *i1*, and then we'll be selecting element in position *i2* from that row.\n",
       "\n",
       "    a[0][4]"
      ]
@@ -984,7 +984,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Instead of using the squared brackets twice, the two indeces can be separated by a comma:\n",
+      "Instead of using the squared brackets twice, the two indices can be separated by a comma:\n",
       "\n",
       "    a[0,4]"
      ]
