--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Problem set 2"
+      "Problem set other"
      ]
     },
     {
@@ -21,14 +21,16 @@
      "source": [
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
-      "Notebook is adapted from material gathered by Andrew McKinley and Oliver Robotham and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "Licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's load the pylab machinery and get that out of the way."
+      "For this problem set, instead of solving the exercises on this notebook, create a new separate notebook for your answers (you can do this from the *dashboard*, likelly the browser window you launched this notebook from). Choose appropriate headings, and give your answers by providing the code cells and outputs, as well as commenting on markdown cells.\n",
+      "\n",
+      "Don't forget to load *pylab* and import *scipy* modules needed."
      ]
     },
     {
@@ -36,6 +38,16 @@
      "collapsed": false,
      "input": [
       "%pylab inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import scipy.optimize"
      ],
      "language": "python",
      "metadata": {},
@@ -53,14 +65,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this exercise we'll be dealing with large datasets, such as those you could have obtained from a measuring instrument, and looking at some properties of the statistical description of sets of measurements."
+      "File 'chromatogram_ion126.dat' contains data of a chromatography experiment set up to determine the amount of the amino acid glycene on an ice sample."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data=loadtxt('measurements.csv',delimiter=',')"
+      "chrom_ion126=loadtxt('chromatogram_ion126.dat')"
      ],
      "language": "python",
      "metadata": {},
@@ -70,25 +82,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "figsize(20,15)\n",
-      "\n",
-      "hist(data[:,0],200,range=(-4,10),alpha=0.5,label='data1')\n",
-      "hist(data[:,1],200,range=(-4,10),alpha=0.5,label='data2')\n",
-      "hist(data[:,2],200,range=(-4,10),alpha=0.5,label='data3')\n",
-      "hist(data[:,3],200,range=(-4,10),alpha=0.5,label='data4')\n",
-      "hist(data[:,4],200,range=(-4,10),alpha=0.5,label='data5')\n",
-      "\n",
-      "legend()\n",
+      "figsize(15,10)\n",
+      "plot(chrom_ion126[:,0],chrom_ion126[:,1])\n",
+      "xlabel('t/min')\n",
       "show()"
      ],
      "language": "python",
@@ -99,7 +95,31 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mean(data[:,1:],axis=0)"
+      "def mb(t,a,b,t0):\n",
+      "    \"Fitting function allowig a fast rise and a slow exponential tail\"\n",
+      "    x=(abs(t-t0)+(t-t0))/2. # This is a trick used so that the function returns 0 when x<x0. Can you understand what is being done?\n",
+      "    return a*x*e**(-x/b)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$$f(x)=a x e^{-\\frac{x}{b}}$$\n",
+      "\n",
+      "The area under the line defined by such a function is:\n",
+      "\n",
+      "$$\\text{area}=a b^2$$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "gli_fit=scipy.optimize.curve_fit(mb,chrom_ion126[:,0],chrom_ion126[:,1],p0=[1,1,43])"
      ],
      "language": "python",
      "metadata": {},
@@ -109,7 +129,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "std(data[:,1:],axis=0)"
+      "gli_fit[0]"
      ],
      "language": "python",
      "metadata": {},
@@ -119,20 +139,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "figsize(20,15)\n",
-      "\n",
-      "hist(data[:,0],200,range=(-4,10),alpha=0.5,label='data1')\n",
-      "plot(array([mean(data[:,0]),mean(data[:,0])]),array([0,30000]),linestyle='--',color='black')\n",
-      "hist(data[:,1],200,range=(-4,10),alpha=0.5,label='data2')\n",
-      "plot(array([mean(data[:,1]),mean(data[:,1])]),array([0,30000]),linestyle='--',color='black')\n",
-      "hist(data[:,2],200,range=(-4,10),alpha=0.5,label='data3')\n",
-      "plot(array([mean(data[:,2]),mean(data[:,2])]),array([0,30000]),linestyle='--',color='black')\n",
-      "hist(data[:,3],200,range=(-4,10),alpha=0.5,label='data4')\n",
-      "plot(array([mean(data[:,3]),mean(data[:,3])]),array([0,30000]),linestyle='--',color='black')\n",
-      "hist(data[:,4],200,range=(-4,10),alpha=0.5,label='data5')\n",
-      "plot(array([mean(data[:,4]),mean(data[:,4])]),array([0,30000]),linestyle='--',color='black')\n",
-      "\n",
-      "legend()\n",
+      "figsize(15,10)\n",
+      "plot(chrom_ion126[:,0],chrom_ion126[:,1])\n",
+      "plot(chrom_ion126[:,0],mb(chrom_ion126[:,0],gli_fit[0][0],gli_fit[0][1],gli_fit[0][2]),linestyle='--',linewidth=5)\n",
+      "xlim([42,46])\n",
       "show()"
      ],
      "language": "python",
@@ -143,10 +153,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "hist(data[:,0],100,normed=True,range=(0,5),alpha=0.5)\n",
-      "hist(data[:10000,0],100,normed=True,range=(0,5),alpha=0.5)\n",
-      "hist(data[:1000,0],100,normed=True,range=(0,5),alpha=0.5)\n",
-      "\n",
+      "figsize(15,10)\n",
+      "plot(chrom_ion126[:,0],chrom_ion126[:,1])\n",
+      "plot(chrom_ion126[:,0],mb(chrom_ion126[:,0],gli_fit[0][0],gli_fit[0][1],gli_fit[0][2]),linestyle='--',linewidth=5)\n",
       "show()"
      ],
      "language": "python",
@@ -154,17 +163,18 @@
      "outputs": []
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Exercise 2"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "N=array([1000,25000,50000,75000,100000])\n",
-      "plot(N,array([std(data[:1000,0]),std(data[:25000,0]),std(data[:50000,0]),std(data[:75000,0]),std(data[:,0])]),color='blue',linestyle='--',label=r'$\\sigma_x(data1)$')\n",
-      "plot(N,array([std(data[:1000,0])/sqrt(1000),std(data[:25000,0])/sqrt(25000),std(data[:50000,0])/sqrt(50000),std(data[:75000,0])/sqrt(75000),std(data[:,0])/sqrt(100000)]),color='blue',label=r'$\\sigma_{\\bar{x}}(data1)$')\n",
-      "plot(N,array([std(data[:1000,3]),std(data[:25000,3]),std(data[:50000,3]),std(data[:75000,3]),std(data[:,3])]),color='cyan',linestyle='--',label=r'$\\sigma_x(data4)$')\n",
-      "plot(N,array([std(data[:1000,3])/sqrt(1000),std(data[:25000,3])/sqrt(25000),std(data[:50000,3])/sqrt(50000),std(data[:75000,3])/sqrt(75000),std(data[:,3])/sqrt(100000)]),color='cyan',label=r'$\\sigma_{\\bar{x}}(data4)$')\n",
-      "yscale('log')\n",
-      "legend()\n",
-      "show()"
+      "spectrum=loadtxt('anthracene_fluo.dat')"
      ],
      "language": "python",
      "metadata": {},
@@ -174,26 +184,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "array([std(data[:1000,0]),std(data[:25000,0]),std(data[:50000,0]),std(data[:75000,0]),std(data[:,0])])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "N=array([1000,25000,50000,75000,100000])\n",
-      "plot(N,array([std(data[:1000,0]),std(data[:25000,0]),std(data[:50000,0]),std(data[:75000,0]),std(data[:,0])]),color='blue',linestyle='--',label=r'$\\sigma_x(data1)$')\n",
-      "plot(N,array([std(data[:1000,0])/sqrt(1000),std(data[:25000,0])/sqrt(25000),std(data[:50000,0])/sqrt(50000),std(data[:75000,0])/sqrt(75000),std(data[:,0])/sqrt(100000)]),color='blue',label=r'$\\sigma_{\\bar{x}}(data1)$')\n",
-      "plot(N,array([std(data[:1000,3]),std(data[:25000,3]),std(data[:50000,3]),std(data[:75000,3]),std(data[:,3])]),color='cyan',linestyle='--',label=r'$\\sigma_x(data4)$')\n",
-      "plot(N,array([std(data[:1000,3])/sqrt(1000),std(data[:25000,3])/sqrt(25000),std(data[:50000,3])/sqrt(50000),std(data[:75000,3])/sqrt(75000),std(data[:,3])/sqrt(100000)]),color='cyan',label=r'$\\sigma_{\\bar{x}}(data4)$')\n",
-      "\n",
-      "plot(array([0,100000]),array([std(data[:,3])/sqrt(100000),std(data[:,3])/sqrt(100000)]),color='red',linestyle=':')\n",
-      "\n",
-      "yscale('log')\n",
-      "legend()\n",
+      "plot(spectrum[:,0],spectrum[:,1])\n",
+      "xlabel(r'$\\lambda/mn$')\n",
+      "ylabel(r'$I_r/au$') #arbitrary units is not very pedagogical!\n",
       "show()"
      ],
      "language": "python",
