Add one more (slightly silly) exercise to problem set 2.

--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -212,6 +212,87 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The following function *g* is a sum of two gaussian curves the behaviour of which we will study graphically.\n",
+      "\n",
+      "$$g(x)=a \\left(e^{-\\frac{(x+d/2)^2}{2 s^2}}+e^{-\\frac{(x-d/2)^2}{2 s^2}}\\right)$$\n",
+      "\n",
+      "* Define a python function which gives the value of the above mathematical function for each value of its parameters. Plot it as a function of *x* for different values of the parameters to identify how each changes the curve.\n",
+      "\n",
+      "* Plot *g* as a function of *x* and *d* simultaneously."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from mpl_toolkits.mplot3d import Axes3D"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def dgauss(x,d,a,s):\n",
+      "    \"2 gaussian curves separated by distance d\"\n",
+      "    return a*(e**(-(x+d/2)**2/(2*s**2))+e**(-(x-d/2)**2/(2*s**2)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mesh = meshgrid(linspace(-10,10,80),linspace(0,10,40))\n",
+      "xm=mesh[0]\n",
+      "dm=mesh[1]\n",
+      "z=dgauss(xm,dm,1,1)\n",
+      "\n",
+      "imshow(z)\n",
+      "xlabel('x')\n",
+      "ylabel('d')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mesh = meshgrid(linspace(-10,10,80),linspace(0,10,40))\n",
+      "xm=mesh[0]\n",
+      "dm=mesh[1]\n",
+      "z=dgauss(xm,dm,1,1)\n",
+      "\n",
+      "fancy=gca(projection='3d')\n",
+      "fancy.plot_surface(xm,dm,z,rstride=1,cstride=1,cmap=cm.RdBu)\n",
+      "fancy.view_init(20,90)\n",
+      "xlabel('x')\n",
+      "ylabel('d')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Exercise 3"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "A molecule can be promoted to an electronic excited state by absorbing light. Molecules in such an excited state may emit light back in a process called fluorescence. The wavelength/energy of the emited depends closelly on the properties of the molecule, and much information can be recovered from the molecule's emission spectrum.\n",
       "\n",
       "File [anthracene_fluo.dat](files/anthracene_fluo.dat) contains data of the emission spectrum of a solution of anthracene in ciclohexane. First column corresponds to the radiation wavelength in nanometers and the second column is radiation intensity in arbitrary units.\n",
@@ -246,11 +327,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We will now fit the spectrum to a mathematical function in orther to be able to extrat quantitative information from it. In spectroscopy it is common practice to fit individual bands in the spectrum by a *gaussian* curve\n",
-      "\n",
-      "$$g(x)=a e^{-\\frac{(x-x_0)^2}{2 s^2}} ,$$\n",
-      "\n",
-      "where $x_0$ corresponds to the centre of the curve, $a$ relates to the curve hight, and $s$ to the curve width.\n",
+      "We will now fit the spectrum to a mathematical function in orther to be able to extrat quantitative information from it. In spectroscopy it is common practice to fit individual bands in the spectrum by a *gaussian* curves.\n",
       "\n",
       "* Construct a fitting function which is able to fit all the bands in the spectrum, produce the fit and, as usual, overlap the experimental and fitted curves.\n",
       "\n",
